Refactored CrowdFunding API
